# SuperCatch

./: .cirrus.yml  Dockerfile  README.md  iv.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci_docker.yml  ci_tests.yml  publish.yml
docs/: DOCM0.md  biblioteca-aserciones.md  biblioteca-logging.md  dependencias.md  design-thinking.md  docker.md  gestor-dependencias.md  gestor-tareas.md  logica-negocio.md  milestones.md  modelo.md  sistemas_ci.md  test-runner.md  user-stories.md  users.md
docs/obj0/: design-thinking.md  init-checklist.md  modelo.md
docs/obj1/: milestones.md  users.md
repo-res/: objetivo0-gitconfig.md  objetivo0-gitstructure.md
src/: README.md  alumno.py  examen.py  pregunta.py  resolucionExamen.py  respuesta.py
supercatch/: corrector.py  examen.py  pln.py  respuesta.py  tokensRespuesta.py
tests/: test_corrector.py  test_pln.py  test_pnl.py
