[tool.poetry]
name = "supercatch"
version = "0.0.3"
description = "Corrector automático de exámenes"
authors = ["Daniel Pérez Ruiz <danielsp13>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
nltk = "^3.8.1"
loguru = "^0.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.1.0"
pyhamcrest = "^2.0.4"

[tool.poe.tasks]
install = "poetry install" 
check = "python -m compileall supercatch"
test = "poetry run pytest -v -n 3"
nltk_data = "python -c 'import nltk; nltk.download(\"stopwords\")'"

build_docker = "docker build -t danielsp13/supercatch:latest ."
run_docker = "bash -c 'docker run -it --rm -v `pwd`:/app/test danielsp13/supercatch'"
rmi_docker = "docker rmi danielsp13/supercatch"
test_docker = ["build_docker", "run_docker"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
